04-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: simple-docker-service
  labels:
    app: simple-docker-app
spec:
  selector:
    app: simple-docker-app
  ports:
    - port: 80
      targetPort: 3000
  type: NodePort
