deployment.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: simple-docker-app
  labels:
    app: simple-docker-app
spec:
  replicas: 2
  selector:
    matchLabels:
      app: simple-docker-app
  template:
    metadata:
      labels:
        app: simple-docker-app
    spec:
      serviceAccountName: ecr-access-sa  # IRSA-enabled service account
      containers:
        - name: simple-docker-app
          image: latest
          ports:
            - containerPort: 3000
          resources:                   # limits resource usage
            requests:
              cpu: "100m"
              memory: "128Mi"
            limits:
              cpu: "250m"
              memory: "256Mi"    
---
apiVersion: v1
kind: Service
metadata:
  name: simple-docker-service
  labels:
    app: simple-docker-app
spec:
  selector:
    app: simple-docker-app
  ports:
    - port: 80
      targetPort: 3000
  type: NodePort
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: simple-docker-ingress
  annotations:
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP": 80}]'
    alb.ingress.kubernetes.io/backend-protocol: HTTP
spec:
  ingressClassName: alb  
  rules:
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: simple-docker-service
                port:
                  number: 80
